@@ -39,10 +39,11 @@ gconf_format_block(void *iarg, char *output)
 {
   __d_gconf data = (__d_gconf) iarg;
 
-  return print_str("GCONF\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%s\x9%s\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%hhu\n",
+  return print_str("GCONF\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%s\x9%s\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%hhu\x9%hhu\n",
       data->r_clean, data->r_postproc, data->r_yearm, data->r_sects, data->o_use_shared_mem,
       data->o_exec_on_lookup_fail, data->e_lookup_fail_imdb, data->e_lookup_fail_tvrage, data->e_match, data->r_skip_basedir,
-      data->r_exclude_user, data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage, data->o_logging);
+      data->r_exclude_user, data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage,
+      data->o_logging, data->o_imdb_skip_zero_score);
 
 }
 
@@ -51,10 +52,11 @@ gconf_format_block_batch(void *iarg, char *output)
 {
   __d_gconf data = (__d_gconf) iarg;
 
-  return printf("GCONF\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%s\x9%s\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%hhu\n",
+  return printf("GCONF\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%s\x9%s\x9%s\x9%s\x9%s\x9%s\x9%hhu\x9%hhu\x9%hhu\x9%hhu\n",
       data->r_clean, data->r_postproc, data->r_yearm, data->r_sects, data->o_use_shared_mem,
       data->o_exec_on_lookup_fail, data->e_lookup_fail_imdb, data->e_lookup_fail_tvrage, data->e_match, data->r_skip_basedir,
-      data->r_exclude_user, data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage, data->o_logging);
+      data->r_exclude_user, data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage,
+      data->o_logging, data->o_imdb_skip_zero_score);
 
 }
 
@@ -77,10 +79,12 @@ gconf_format_block_exp(void *iarg, char *output)
       "r_exclude_user_flags %s\n"
       "lookup_match_strictness_imdb %hhu\n"
       "lookup_match_strictness_tvrage %hhu\n"
-      "o_logging %hhu\n\n"
+      "o_logging %hhu\n"
+      "o_imdb_skip_zero_score %hhu\n\n"
       , data->r_clean, data->r_postproc, data->r_yearm, data->r_skip_basedir, data->r_sects, data->o_use_shared_mem,
       data->o_exec_on_lookup_fail, data->e_lookup_fail_imdb, data->e_lookup_fail_tvrage, data->e_match, data->r_exclude_user,
-      data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage, data->o_logging);
+      data->r_exclude_user_flags, data->o_lookup_strictness_imdb, data->o_lookup_strictness_tvrage, data->o_logging,
+      data->o_imdb_skip_zero_score);
 
 }
 
@@ -112,6 +116,11 @@ ref_to_val_ptr_gconf(void *arg, char *match, int *output)
     {
       *output = ~((uint8_t) sizeof(data->o_logging));
       return &data->o_logging;
+    }
+  else if (!strncmp(match, _MC_GCONF_IMDB_SKZERO, 20))
+    {
+      *output = ~((uint8_t) sizeof(data->o_imdb_skip_zero_score));
+      return &data->o_imdb_skip_zero_score;
     }
 
   return NULL;
@@ -227,6 +236,14 @@ dt_rval_gconf_o_log(void *arg, char *match, char *output, size_t max_size,
   return output;
 }
 
+char *
+dt_rval_gconf_o_imdb_skip_zero(void *arg, char *match, char *output,
+    size_t max_size, void *mppd)
+{
+  snprintf(output, max_size, ((__d_drt_h ) mppd)->direc, ((__d_gconf) arg)->o_imdb_skip_zero_score);
+  return output;
+}
+
 void *
 ref_to_val_lk_gconf(void *arg, char *match, char *output, size_t max_size,
     void *mppd)
@@ -298,6 +315,10 @@ ref_to_val_lk_gconf(void *arg, char *match, char *output, size_t max_size,
   else if (!strncmp(match, _MC_GCONF_LOGGING, 7))
     {
       return as_ref_to_val_lk(match, dt_rval_gconf_o_log , (__d_drt_h) mppd, "%hhu");
+    }
+  else if (!strncmp(match, _MC_GCONF_IMDB_SKZERO, 20))
+    {
+      return as_ref_to_val_lk(match, dt_rval_gconf_o_imdb_skip_zero , (__d_drt_h) mppd, "%hhu");
     }
 
   return NULL;
@@ -458,6 +479,16 @@ gcb_gconf(void *buffer, char *key, char *val)
           return -1;
         }
       ptr->o_logging = v_ui;
+      return 1;
+    }
+  else if (k_l == 20 && !strncmp(key, _MC_GCONF_IMDB_SKZERO, 20))
+    {
+      uint8_t v_ui = (uint8_t) strtoul(val, NULL, 10);
+      if ( errno == ERANGE)
+        {
+          return -1;
+        }
+      ptr->o_imdb_skip_zero_score = v_ui;
       return 1;
     }
 
